--- a/text.css
+++ b/text.css
@@ -6,13 +6,13 @@
 body{
     font-family: 'Noto Sans', sans-serif;
     color: #2E2E7E;
-    background-color: #F7F7F7;
+    /* background-color: #F7F7F7; */
 }
 body a:hover{
     color: #2E2E7E;
 }
 header{
-    border-bottom: solid 1px rgba(85, 85, 85, 0.06);
+    border-bottom: solid 1px #f1f1f1;
     padding: 0px 50px;
 }
 nav .h1{
@@ -54,11 +54,13 @@ nav ul li .sub-menu{
     background: #ffffff;
     visibility: hidden;
     width: 150px;
+    border: solid 1px #f1f1f1;
+    border-top: solid 2px #2E2E7E;
 }
 nav ul li .sub-menu li{
     display: block;
-    border: solid 1px rgba(85, 85, 85, 0.06);
-    color: white;
+    border-bottom: solid 1px #f1f1f1;
+    color: #ffffff;
 }
 nav ul li .sub-menu li a{
     line-height: 40px;
@@ -92,13 +94,11 @@ nav ul li:hover > a > #arrow:before{
         position: absolute;   
         transition: all 0.3 ease;   
         visibility: hidden; 
-        /* opacity: 0; */
     }
     nav ul li{
         display: block;
         width: 100%;
-        background: #F7F7F7;
-        /* padding: 0 50px; */
+        background: #ffffff;
         border-bottom: solid 1px rgba(85, 85, 85, 0.06);
     }
     nav ul li a{
@@ -119,13 +119,14 @@ nav ul li:hover > a > #arrow:before{
         display: none;
         position: relative; 
         transition: all 0.3s ease;  
+        border: none;
     }
     nav ul li .sub-menu li{
         width: 100%;
         /* padding: 0%; */
         padding: 0 50px;
         border: none;
-        color: #ffffff;
+        background: #F7F7F7;
         border-bottom: solid 1px rgba(85, 85, 85, 0.06);
     }
     nav ul li .sub-menu li a{
@@ -137,4 +138,3 @@ nav ul li:hover > a > #arrow:before{
     }
     
 }
-
